--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only/1.7/calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only/1.7/calico.yaml
@@ -1,12 +1,10 @@
 ---
 layout: null
 ---
-<<<<<<< HEAD
-{% include {{page.version}}/manifests/calico.yaml datastore="kdd" app_layer_policy="disabled" %}
-=======
 {% helm %}
 datastore: kdd
 typha:
   enabled: true
+app_layer_policy: true
+app_layer_policy_enabled: false
 {% endhelm %}
->>>>>>> open/master
