--- a/master/getting-started/kubernetes/installation/hosted/calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/calico.yaml
@@ -1,12 +1,10 @@
 ---
 layout: null
 ---
-<<<<<<< HEAD
-{% include {{page.version}}/manifests/calico.yaml datastore="etcd" network="calico" calico_ipam="true" app_layer_policy="disabled" %}
-=======
 {% helm %}
 datastore: etcd
 network: calico
 calico_ipam: true
+app_layer_policy: true
+app_layer_policy_enabled: false
 {% endhelm %}
->>>>>>> open/master
