--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/calico.yaml
@@ -1,12 +1,10 @@
 ---
 layout: null
 ---
-<<<<<<< HEAD
-{% include {{page.version}}/manifests/calico.yaml datastore="kdd" network="calico" app_layer_policy="disabled" %}
-=======
 {% helm %}
 datastore: kdd
 network: calico
 calico_ipam: true
+app_layer_policy: true
+app_layer_policy_enabled: false
 {% endhelm %}
->>>>>>> open/master
