--- a/master/getting-started/kubernetes/installation/manifests/app-layer-policy/etcd/calico-networking/calico.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/app-layer-policy/etcd/calico-networking/calico.yaml
@@ -1,13 +1,10 @@
 ---
 layout: null
 ---
-<<<<<<< HEAD
-{% include {{page.version}}/manifests/calico.yaml datastore="etcd" network="calico" calico_ipam="true" app_layer_policy="true" %}
-=======
 {% helm %}
 datastore: etcd
 network: calico
 calico_ipam: true
 app_layer_policy: true
+app_layer_policy_enabled: true
 {% endhelm %}
->>>>>>> open/master
