--- a/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/calico-networking/calico-node.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/calico-networking/calico-node.yaml
@@ -1,9 +1,6 @@
 ---
 layout: null
 ---
-<<<<<<< HEAD
-{% include {{page.version}}/manifests/calico-node.yaml datastore="kdd" network="calico" typha="true" app_layer_policy="true" variant_name="Calico" %}
-=======
 {% helm --execute=templates/calico-node.yaml %}
 datastore: kdd
 network: calico
@@ -11,7 +8,5 @@ calico_ipam: true
 typha:
   enabled: true
 app_layer_policy: true
-variant_name: Calico
+app_layer_policy_enabled: true
 {% endhelm %}
-
->>>>>>> open/master
