--- a/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/calico-networking/calico.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/calico-networking/calico.yaml
@@ -1,14 +1,11 @@
 ---
 layout: null
 ---
-<<<<<<< HEAD
-{% include {{page.version}}/manifests/calico.yaml datastore="kdd" network="calico" typha="true" app_layer_policy="true" %}
-=======
 {% helm %}
 datastore: kdd
 network: calico
 typha:
   enabled: true
 app_layer_policy: true
+app_layer_policy_enabled: true
 {% endhelm %}
->>>>>>> open/master
