--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/cnx-etcd.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/cnx-etcd.yaml
@@ -1,4 +1,6 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/cnx.yaml datastore="etcd" %}
+{% helm --execute templates/cnx.yaml %}
+datastore: etcd
+{% endhelm %}
