--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/secure-es/operator.yaml
@@ -1,4 +1,6 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/operator.yaml elasticsearch="external" %}
+{% helm --execute templates/operator.yaml %}
+elasticsearchType: external
+{% endhelm %}
