--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/federation-controller.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/federation-controller.yaml
@@ -1,4 +1,8 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/tigera-federation-controller.yaml datastore="kdd" %}
+{% helm --execute templates/tigera-federation-controller.yaml %}
+datastore: kdd
+federation:
+  enabled: true
+{% endhelm %}
