--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/cnx-kdd-eks.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-ecs/cnx-kdd-eks.yaml
@@ -1,4 +1,7 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/cnx.yaml datastore="kdd" platform="eks" %}
+{% helm --execute templates/cnx.yaml %}
+datastore: kdd
+platform: eks
+{% endhelm %}
