--- a/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/calico-networking/calico-node.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/calico-networking/calico-node.yaml
@@ -7,6 +7,7 @@ network: calico
 calico_ipam: true
 typha:
   enabled: true
-app_layer_policy: true
-app_layer_policy_enabled: true
+app_layer_policy:
+  enabled: true
+  configured: true
 {% endhelm %}
