--- a/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only/calico-node.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only/calico-node.yaml
@@ -5,6 +5,7 @@ layout: null
 datastore: kdd
 typha:
   enabled: true
-app_layer_policy: true
-app_layer_policy_enabled: true
+app_layer_policy:
+  enabled: true
+  configured: true
 {% endhelm %}
