--- a/master/getting-started/kubernetes/installation/manifests/aws-sg-integration/cloud-controllers.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/aws-sg-integration/cloud-controllers.yaml
@@ -1,5 +1,7 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/cloud-controllers.yaml datastore="kdd" network="calico" %}
-
+{% helm --execute templates/cloud-controllers.yaml %}
+datastore: kdd
+network: calico
+{% endhelm %}
