--- a/master/getting-started/openshift/cnx.yaml
+++ b/master/getting-started/openshift/cnx.yaml
@@ -1,4 +1,7 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/cnx.yaml datastore="etcd" orch="openshift" %}
+{% helm --execute templates/cnx.yaml %}
+datastore: etcd
+orch: openshift
+{% endhelm %}
