--- a/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/cnx/1.7/monitor-calico.yaml
@@ -1,4 +1,7 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/monitor-calico.yaml secure_es="false" elasticsearch="operator" %}
+{% helm --execute templates/monitor-calico.yaml --execute templates/es-proxy.yaml %}
+secure_es: false
+elasticsearchType: operator
+{% endhelm %}
