--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/crds-only.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/calico-networking/1.7/crds-only.yaml
@@ -1,4 +1,6 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/kdd-crds.yaml network="calico" %}
+{% helm --execute templates/kdd-crds.yaml --execute templates/ee-specific-kdd-crds.yaml %}
+network: calico
+{% endhelm %}
