--- a/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only-ecs/calico-node.yaml
+++ b/master/getting-started/kubernetes/installation/manifests/app-layer-policy/kubernetes-datastore/policy-only-ecs/calico-node.yaml
@@ -1,4 +1,13 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/calico-node.yaml datastore="kdd" network="ecs" typha="true" app_layer_policy="true" variant_name="Calico" %}
+{% helm --execute templates/calico-node.yaml %}
+datastore: kdd
+network: ecs
+typha:
+  enabled: true
+app_layer_policy:
+  enabled: true
+  configured: true
+variant_name: Calico
+{% endhelm %}
