CNX-6362, CNX-6363: intrusion-detection-controller watches GlobalThreatFeeds, syncs threat feed to GlobalNetworkSet (#29)
* CNX-6362: intrusion-detection-controller watches GlobalThreatFeeds
* CNX-6363: intrusion-detection-controller syncs threat feed to GlobalNetworkSet

* Add some logging to watcher.sync

* Make watcher sync period parametric

* Fix a GoLand refactor issue with IPSet strings

* Watcher sync handles errors from restartPuller and stopFeed

* Clean up some go vet errors

* Add more test cases for puller/http

* Switch back to go.mod

* Check for nil on interface conversion in GetIPSetModified

* Alter IPSet created_at mapping to omit format

* Make GetIPSetModified type detection more stable, prevent panics

* Fix typo

Co-Authored-By: hstern <henry@stern.ca>

* Use ctx, not context.Background()

Co-Authored-By: hstern <henry@stern.ca>

* CNX-6363: intrusion-detection-controller syncs threat feed to GlobalNetworkSet

* go mod tidy

* httpPuller Allow empty Pull section, handle Optional

* Fix leaky snapshots channel in httpPuller

* Cancel contexts in Run functions

* httpPuller: handle missing Pull sections by skipping run

* Convert watcher from polling to an event loop

Not entirely complete.

* Clean up tests, make mock package

* Remove feed.Feed for v3.GlobalThreatFeed, address locking issues

* Clean up GlobalNetworkSet code

* Add missing err check to GetIPSet

* Implement Statser with option to prime LastSuccessfulSync

* Rename confusing parseFeedHTTP method

* Handle watcher Run error in controller

* Fix containerized controller build

Signed-off-by: Spike Curtis <spike@tigera.io>

* Fix containerized controller build (#30)

Signed-off-by: Spike Curtis <spike@tigera.io>

* Fix make ut target for gomodules

Signed-off-by: Spike Curtis <spike@tigera.io>

* Move ipSet.GetIPSetModified inside HTTPPuller.Run

* Fix broken elastic.GetIPSet

* Skip Runloop tests unless 

--- a/controller/Makefile
+++ b/controller/Makefile
@@ -1,3 +1,5 @@
+# Copyright 2019 Tigera Inc. All rights reserved.
+
 ###############################################################################
 # Both native and cross architecture builds are supported.
 # The target architecture is select by setting the ARCH variable.
@@ -133,6 +135,9 @@ RELEASE_LDFLAGS=-ldflags "$(VERSION_FLAGS) -s -w"
 MY_UID:=$(shell id -u)
 MY_GID:=$(shell id -g)
 
+ifdef SSH_AUTH_SOCK
+  EXTRA_DOCKER_ARGS += -v $(SSH_AUTH_SOCK):/ssh-agent --env SSH_AUTH_SOCK=/ssh-agent
+endif
 
 DOCKER_GO_BUILD := mkdir -p .go-pkg-cache && \
                    mkdir -p .go-build-cache && \
@@ -166,7 +171,8 @@ endif
 	@echo Building controller...
 	mkdir -p bin
 	$(DOCKER_GO_BUILD) \
-	    sh -c 'go build -o $@ -v $(LDFLAGS) "$(PACKAGE_NAME)/cmd/controller" && \
+	    sh -c 'git config --global url."git@github.com:tigera".insteadOf "https://github.com/tigera" && \
+	           go build -o $@ -v $(LDFLAGS) "$(PACKAGE_NAME)/cmd/controller" && \
                ( ldd $(BINDIR)/controller-$(ARCH) 2>&1 | grep -q "Not a valid dynamic program" || \
 	             ( echo "Error: $(BINDIR)/controller-$(ARCH) was not statically linked"; false ) )'
 
@@ -247,7 +253,8 @@ sub-tag-images-%:
 .PHONY: ut
 ut:
 	$(DOCKER_GO_BUILD) \
-		sh -c 'go test $(UNIT_TEST_FLAGS) \
+		sh -c 'git config --global url."git@github.com:tigera".insteadOf "https://github.com/tigera" && \
+		    go test $(UNIT_TEST_FLAGS) \
 			$(addprefix $(PACKAGE_NAME)/,$(TEST_DIRS))'
 
 .PHONY: fv
