fix remaining bits missed in the patches

--- a/_includes/master/charts/calico/values.yaml
+++ b/_includes/master/charts/calico/values.yaml
@@ -1,4 +1,14 @@
 typha:
   enabled: false
+federation:
+  enabled: false
 network: "none"
 calico_ipam: false
+datastore: kdd
+
+# TODO: move to helpers
+orch: ""
+elasticsearchType: operator
+rbac: ""
+variant_name: CNX
+platform: ""
