--- a/_includes/master/manifests/cloud-controllers.yaml
+++ b/_includes/master/manifests/cloud-controllers.yaml
@@ -1,4 +1,4 @@
-{% comment %}
+{{- /*
 aws-cloud-controller.yaml acccepts the following include flags:
 
 | Name             | Accepted Values               |
@@ -6,7 +6,7 @@ aws-cloud-controller.yaml acccepts the following include flags:
 | datastore        | kdd, etcd                     |
 | variant_name     | Calico, Canal                 |
 
-{% endcomment -%}
+*/ -}}
 # Create the ServiceAccount and roles necessary for Tigera Cloud Controllers.
 apiVersion: v1
 kind: ServiceAccount
@@ -28,7 +28,7 @@ rules:
       - get
       - list
       - watch
-{%- if include.datastore == "kdd" %}
+{{- if eq .Values.datastore "kdd" }}
   - apiGroups: ["crd.projectcalico.org"]
     resources:
       - globalnetworkpolicies
@@ -44,7 +44,7 @@ rules:
       - update
       - watch
       - delete
-{%- endif %}
+{{- end }}
 
 ---
 
@@ -93,7 +93,7 @@ spec:
         - name: cnx-pull-secret
       containers:
         - name: tigera-cloud-controllers
-          image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["cloudControllers"]}}:{{site.data.versions[page.version].first.components["cloud-controllers"].version}}
+          image: {{.Values.imageRegistry}}{{.Values.cloudControllers.image}}:{{.Values.cloudControllers.tag}}
           readinessProbe:
             exec:
               command:
@@ -102,11 +102,11 @@ spec:
             periodSeconds: 10
             failureThreshold: 3
           env:
-{%- if include.datastore == "kdd" %}
+{{- if eq .Values.datastore "kdd" }}
             # Use Kubernetes API as the backing datastore.
             - name: DATASTORE_TYPE
               value: "kubernetes"
-{%- else %}
+{{- else }}
             # Use Etcd as the backing datastore.
             - name: DATASTORE_TYPE
               value: "etcdv3"
@@ -114,27 +114,27 @@ spec:
             - name: ETCD_ENDPOINTS
               valueFrom:
                 configMapKeyRef:
-                  name: {{include.variant_name | downcase}}-config
+                  name: {{lower .Values.variant_name}}-config
                   key: etcd_endpoints
             # Location of the CA certificate for etcd.
             - name: ETCD_CA_CERT_FILE
               valueFrom:
                 configMapKeyRef:
-                  name: {{include.variant_name | downcase}}-config
+                  name: {{lower .Values.variant_name}}-config
                   key: etcd_ca
             # Location of the client key for etcd.
             - name: ETCD_KEY_FILE
               valueFrom:
                 configMapKeyRef:
-                  name: {{include.variant_name | downcase}}-config
+                  name: {{lower .Values.variant_name}}-config
                   key: etcd_key
             # Location of the client certificate for etcd.
             - name: ETCD_CERT_FILE
               valueFrom:
                 configMapKeyRef:
-                  name: {{include.variant_name | downcase}}-config
+                  name: {{lower .Values.variant_name}}-config
                   key: etcd_cert
-{%- endif %}
+{{- end }}
             # Enabling health reporting requires additional IAM permissions for tigera-cloud-controllers
             - name: CLOUDWATCH_HEALTHREPORTING_ENABLED
               value: "false"
@@ -175,7 +175,7 @@ spec:
                 configMapKeyRef:
                   name: tigera-aws-config
                   key: trust_sg
-{%- if include.datastore == "etcd" %}
+{{- if eq .Values.datastore "etcd" }}
           volumeMounts:
             # Mount in the etcd TLS secrets.
             - mountPath: /calico-secrets
@@ -186,5 +186,5 @@ spec:
           secret:
             secretName: calico-etcd-secrets
             defaultMode: 0400
-{%- endif %}
+{{- end }}
 
