fix variant_name includes

--- a/_includes/master/manifests/tigera-federation-controller.yaml
+++ b/_includes/master/manifests/tigera-federation-controller.yaml
@@ -62,25 +62,25 @@ spec:
             - name: ETCD_ENDPOINTS
               valueFrom:
                 configMapKeyRef:
-                  name: {{.Values.variant_name | lower}}-config
+                  name: {{include "variant_name" | lower}}-config
                   key: etcd_endpoints
             # Location of the CA certificate for etcd.
             - name: ETCD_CA_CERT_FILE
               valueFrom:
                 configMapKeyRef:
-                  name: {{.Values.variant_name | lower}}-config
+                  name: {{include "variant_name" | lower}}-config
                   key: etcd_ca
             # Location of the client key for etcd.
             - name: ETCD_KEY_FILE
               valueFrom:
                 configMapKeyRef:
-                  name: {{.Values.variant_name | lower}}-config
+                  name: {{include "variant_name" | lower}}-config
                   key: etcd_key
             # Location of the client certificate for etcd.
             - name: ETCD_CERT_FILE
               valueFrom:
                 configMapKeyRef:
-                  name: {{.Values.variant_name | lower}}-config
+                  name: {{include "variant_name" | lower}}-config
                   key: etcd_cert
 {{- else if eq .Values.datastore "kdd" }}
             # Use Kubernetes API as the backing datastore.
