default alp to disabled & not-configured

--- a/_includes/master/charts/calico/values.yaml
+++ b/_includes/master/charts/calico/values.yaml
@@ -5,6 +5,9 @@ federation:
 network: "none"
 calico_ipam: false
 datastore: kdd
+app_layer_policy:
+  enabled: false
+  configured: false
 
 # TODO: move to helpers
 orch: ""
