--- a/_data/master/navbars/networking.yml
+++ b/_data/master/navbars/networking.yml
@@ -26,33 +26,26 @@ toc:
   path: /networking/service-advertisement
 - title: Assigning IP addresses based on topology
   path: /networking/assigning-ip-addresses-topology
-- title: Calico for OpenStack
-  section:
-  - title: Setting up a development machine
-    path:  /networking/openstack/dev-machine-setup
-  - title: IP addressing and connectivity
-    path: /networking/openstack/connectivity
-  - title: Endpoint labels and operator policy
-    path: /networking/openstack/labels
-  - title: Configuring systems for use with Calico
-    path: /networking/openstack/configuration
-  - title: Detailed semantics
-    path: /networking/openstack/semantics
-  - title: Floating IPs
-    path: /networking/openstack/floating-ips
-  - title: Service IPs
-    path: /networking/openstack/service-ips
-  - title: Host routes
-    path: /networking/openstack/host-routes
-  - title: Multiple regions
-    path: /networking/openstack/multiple-regions
-  - title: Kuryr
-    path: /networking/openstack/kuryr
-  - title: Calico's interpretation of Neutron API calls
-    path: /networking/openstack/neutron-api
+- title: Custom BGP configuration 
+  path: /networking/custom-bgp-config
 - title: Network design
   section:
     - title: Calico over Ethernet fabrics
       path: /networking/design/l2-interconnect-fabric
     - title: Calico over IP fabrics
       path: /networking/design/l3-interconnect-fabric
+- title: Federation (Kubernetes only)
+  section:
+  - title: Overview
+    path: /networking/federation/
+  - title: Creating kubeconfig files
+    path: /networking/federation/kubeconfig
+  - title: Configuring access to remote clusters
+    path: /networking/federation/configure-rcc
+  - title: Configuring federated services
+    path: /networking/federation/services-controller
+  - title: Example AWS configuration
+    path: /networking/federation/aws
+  - title: Querying remote clusters with calicoq
+    path: /networking/federation/calicoq
+
