--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+
+# Build and IDE artifacts
+.*.swp
+.idea/
+.go-build-cache
+.go-pkg-cache
+bin
