Rebasing to the latest fork-master(8e8526533e3be9fab2df8b01a28ac5b849bcf4b6)   Adding GlobalReportTemplate, GlobalReport resources.
Fixed dependency, UTs

Updating resource definitions(+GlobalReportType, -GlobalReportTemplate) and related changes.

Typo: reporttemplate->reporttype

Adding GlobalReportTemplate, GlobalReport resources.

Fixed dependency, UTs

Updating resource definitions(+GlobalReportType, -GlobalReportTemplate) and related changes.

Typo: reporttemplate->reporttype

PR comments: regenerate openapi, remove UT not applicable(. test)

PR comments: update json names, alias rename, code split, undo GoFmt import, nitpicks

PR comments: rename struct, relabel comments

PR comments: added comment, removed placeholder test function

Adding datastore UTs for GlobalReport/GlobalReportType

GoFmt new UT files.

--- a/glide.yaml
+++ b/glide.yaml
@@ -85,6 +85,8 @@ import:
 # since we only reference it from out Makefile.
 - package: golang.org/x/tools/import
 - package: k8s.io/gengo
+# glide cannot fetch this package k8s.io/gengo relies on.
+- package: k8s.io/klog
 # Pin client-go to the exact tag release for K8s 1.11.0
 - package: k8s.io/client-go
   version: v8.0.0
@@ -100,3 +102,4 @@ import:
 # version.
 - package: github.com/json-iterator/go
   version: f2b4162afba35581b6d4a50d3b8f34e33c144682
+- package: github.com/robfig/cron
