--- a/test/crds.yaml
+++ b/test/crds.yaml
@@ -234,3 +234,27 @@ items:
       kind: GlobalThreatFeed
       plural: globalthreatfeeds
       singular: globalthreatfeed
+- apiVersion: apiextensions.k8s.io/v1beta1
+  kind: CustomResourceDefinition
+  metadata:
+    name: globalreports.crd.projectcalico.org
+  spec:
+    scope: Cluster
+    group: crd.projectcalico.org
+    version: v1
+    names:
+      kind: GlobalReport
+      plural: globalreports
+      singular: globalreport
+- apiVersion: apiextensions.k8s.io/v1beta1
+  kind: CustomResourceDefinition
+  metadata:
+    name: globalreporttypes.crd.projectcalico.org
+  spec:
+    scope: Cluster
+    group: crd.projectcalico.org
+    version: v1
+    names:
+      kind: GlobalReportType
+      plural: globalreporttypes
+      singular: globalreporttype
