--- a/master/getting-started/kubernetes/tigera-federation-secret.yaml
+++ b/master/getting-started/kubernetes/tigera-federation-secret.yaml
@@ -2,7 +2,7 @@
 layout: null
 ---
 # {{site.prodname}} Version {{site.data.versions[page.version].first.title}}
-# {{site.url}}/{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
+# {{site.baseurl}}/{{page.version}}/releases#{{site.data.versions[page.version].first.title}}
 
 # The following contains k8s Secrets for use with {{site.prodname}} Federation.
 # For information on populating Secrets, see http://kubernetes.io/docs/user-guide/secrets/
