--- a/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/cnx-kdd-gke.yaml
+++ b/master/getting-started/kubernetes/installation/hosted/kubernetes-datastore/policy-only-gke/cnx-kdd-gke.yaml
@@ -1,4 +1,7 @@
 ---
 layout: null
 ---
-{% include {{page.version}}/manifests/cnx.yaml datastore="kdd" platform="gke" %}
+{% helm --execute templates/cnx.yaml %}
+datastore: kdd
+platform: gke
+{% endhelm %}
