--- a/_includes/master/manifests/monitor-calico.yaml
+++ b/_includes/master/manifests/monitor-calico.yaml
@@ -888,6 +888,15 @@ spec:
       containers:
       - name: controller
         image: {{site.data.versions[page.version].first.dockerRepo}}/{{site.imageNames["intrusion-detection-controller"]}}:{{site.data.versions[page.version].first.components["intrusion-detection-controller"].version}}
+        livenessProbe:
+          exec:
+            command: ["/healthz", "liveness"]
+          initialDelaySeconds: 5
+        name: controller
+        readinessProbe:
+          exec:
+            command: ["/healthz", "readiness"]
+          initialDelaySeconds: 5
         env:
 {%- if include.secure_es == "true" %}
           - name: ELASTIC_HOST
